# uart-split

./: Cargo.toml
src/: main.rs
